--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -1,39 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/constraintLayout"
-        android:background="@drawable/game_over_stub"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
+    android:background="@drawable/game_over_stub"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <Button
-            android:text="play again"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonPlayAgain"
-            android:background="@color/black"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="164dp" app:layout_constraintHorizontal_bias="0.536"/>
-    <Button
-            android:text="exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/buttonExit"
-            app:layout_constraintTop_toBottomOf="@+id/buttonPlayAgain"
-            android:layout_marginTop="128dp" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.532"/>
+
+    <com.khudyakovvladimir.vhowl.game.OwlReady
+        android:id="@+id/owlReady"
+        android:layout_width="407dp"
+        android:layout_height="358dp"
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="4dp">
+
+    </com.khudyakovvladimir.vhowl.game.OwlReady>
 
     <com.khudyakovvladimir.vhowl.game.OwlSleep
-            android:id="@+id/owlSpeep"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/buttonExit" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="108dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.554"
-            app:layout_constraintVertical_bias="0.032">
+        android:id="@+id/owlSpeep"
+        android:layout_width="408dp"
+        android:layout_height="416dp"
+        tools:layout_editor_absoluteX="-8dp"
+        tools:layout_editor_absoluteY="318dp" />
+    ">
 
     </com.khudyakovvladimir.vhowl.game.OwlSleep>
 
