--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/graph" app:startDestination="@id/canvasFragment">
+            android:id="@+id/graph" app:startDestination="@id/gameFragment">
 
-    <fragment android:id="@+id/canvasFragment" android:name="com.khudyakovvladimir.vhowl.view.GameFragment"
+    <fragment android:id="@+id/gameFragment" android:name="com.khudyakovvladimir.vhowl.view.GameFragment"
               android:label="CanvasFragment">
         <action android:id="@+id/action_canvasFragment_to_startFragment" app:destination="@id/startFragment"/>
     </fragment>
