--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -2,23 +2,54 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:background="@drawable/game_over_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <com.khudyakovvladimir.vhowl.game.OwlReady
+            android:id="@+id/owlReady"
             android:layout_width="171dp"
-            android:layout_height="160dp" android:id="@+id/owlReady"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="84dp"
-    />
+            android:layout_height="160dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintTop_toBottomOf="@+id/textViewCount"
+            android:layout_marginTop="24dp"/>
     <com.khudyakovvladimir.vhowl.game.OwlSleep
+            android:id="@+id/owlSleep"
             android:layout_width="166dp"
-            android:layout_height="169dp" android:id="@+id/owlSleep"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/owlReady" android:layout_marginTop="148dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+            android:layout_height="169dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.477"
+            android:layout_marginBottom="172dp"
+            app:layout_constraintTop_toBottomOf="@+id/owlReady"
+            app:layout_constraintVertical_bias="0.738"/>
+    <TextView
+            android:id="@+id/textViewTime"
+            android:text="123"
+            android:layout_width="307dp"
+            android:layout_height="92dp"
+            android:fontFamily="@font/segoesc"
+            android:textSize="20sp"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="40dp"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <TextView
+            android:id="@+id/textViewCount"
+            android:text="123"
+            android:layout_width="301dp"
+            android:layout_height="52dp"
+            android:fontFamily="@font/segoesc"
+            android:textSize="18sp"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTime"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
