--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -2,11 +2,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constraintLayout"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/constraintLayout"
     android:background="@drawable/game_over_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+            android:id="@+id/imageViewOwl"
+            android:layout_width="91dp"
+            android:layout_height="56dp"
+            app:srcCompat="@drawable/timer"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="104dp"
+    />
+    <ImageView
+            android:id="@+id/imageViewMouse"
+            android:layout_width="94dp"
+            android:layout_height="56dp"
+            app:srcCompat="@drawable/mouse"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="104dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewOwl"
+            android:layout_marginTop="4dp"/>
     <com.khudyakovvladimir.vhowl.game.OwlReady
             android:id="@+id/owlReady"
             android:layout_width="171dp"
@@ -29,27 +48,27 @@
             app:layout_constraintVertical_bias="0.738"/>
     <TextView
             android:id="@+id/textViewTime"
-            android:text="123"
-            android:layout_width="307dp"
-            android:layout_height="92dp"
+            android:text="12:00"
+            android:layout_width="104dp"
+            android:layout_height="50dp"
             android:fontFamily="@font/segoesc"
             android:textSize="20sp"
             android:gravity="center"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="92dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="40dp"
-            app:layout_constraintHorizontal_bias="0.495"/>
+            android:layout_marginTop="36dp"
+            app:layout_constraintStart_toEndOf="@+id/imageViewOwl" app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:id="@+id/textViewCount"
-            android:text="123"
-            android:layout_width="301dp"
-            android:layout_height="52dp"
+            android:text="12"
+            android:layout_width="101dp"
+            android:layout_height="41dp"
             android:fontFamily="@font/segoesc"
             android:textSize="18sp"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTime"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageViewMouse" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTime" android:layout_marginTop="12dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
