--- a/app/src/main/res/layout/game_fragment_layout.xml
+++ b/app/src/main/res/layout/game_fragment_layout.xml
@@ -1,9 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearLayout"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-</LinearLayout>
+    <com.khudyakovvladimir.vhowl.game.GameView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+    </com.khudyakovvladimir.vhowl.game.GameView>
+
+    <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        <ImageView
+                android:id="@+id/imageViewPause"
+                android:background="@drawable/timer"
+                android:layout_width="30dp"
+                android:layout_height="30dp">
+        </ImageView>
+
+    </LinearLayout>
+</FrameLayout>
