--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/constraintLayout"
+    android:id="@+id/constraintLayout"
     android:background="@drawable/game_over_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -58,7 +58,8 @@
             android:layout_marginEnd="92dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="36dp"
-            app:layout_constraintStart_toEndOf="@+id/imageViewOwl" app:layout_constraintHorizontal_bias="1.0"/>
+            app:layout_constraintStart_toEndOf="@+id/imageViewOwl"
+            app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:id="@+id/textViewCount"
             android:text="12"
@@ -68,7 +69,9 @@
             android:textSize="18sp"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageViewMouse" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTime" android:layout_marginTop="12dp"/>
+            app:layout_constraintStart_toEndOf="@+id/imageViewMouse"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/textViewTime"
+            android:layout_marginTop="12dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
