--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/constraintLayout"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/constraintLayout"
     android:background="@drawable/game_over_stub"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -41,11 +41,9 @@
             android:layout_height="169dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.477"
-            android:layout_marginBottom="172dp"
             app:layout_constraintTop_toBottomOf="@+id/owlReady"
-            app:layout_constraintVertical_bias="0.738"/>
+    />
     <TextView
             android:id="@+id/textViewTime"
             android:text="12:00"
@@ -73,5 +71,16 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/textViewTime"
             android:layout_marginTop="12dp"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/cloud"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/owlSleep"
+            android:layout_marginTop="52dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.095"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
