--- a/app/src/main/res/navigation/graph.xml
+++ b/app/src/main/res/navigation/graph.xml
@@ -6,7 +6,10 @@
     <fragment android:id="@+id/gameFragment" android:name="com.khudyakovvladimir.vhowl.view.GameFragment"
               android:label="CanvasFragment">
         <action android:id="@+id/action_canvasFragment_to_startFragment" app:destination="@id/startFragment"/>
+        <action android:id="@+id/action_gameFragment_to_highScoreFragment" app:destination="@id/highScoreFragment"/>
     </fragment>
     <fragment android:id="@+id/startFragment" android:name="com.khudyakovvladimir.vhowl.view.StartFragment"
               android:label="StartFragment"/>
+    <fragment android:id="@+id/highScoreFragment" android:name="com.khudyakovvladimir.vhowl.view.HighScoreFragment"
+              android:label="HighScoreFragment"/>
 </navigation>
