--- a/app/src/main/res/layout/high_score_fragment_layout.xml
+++ b/app/src/main/res/layout/high_score_fragment_layout.xml
@@ -26,11 +26,19 @@
             android:layout_marginBottom="20dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintBottom_toTopOf="@+id/imageViewDelete"/>
+    <ImageView
+            android:id="@+id/imageViewDelete"
+            android:layout_width="337dp"
+            android:layout_height="53dp"
+            app:srcCompat="@drawable/clear"
+            android:layout_marginBottom="28dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
