--- a/app/src/main/res/layout/start_fragment_layout.xml
+++ b/app/src/main/res/layout/start_fragment_layout.xml
@@ -8,15 +8,15 @@
     android:layout_height="match_parent">
 
     <ImageView
-            android:id="@+id/imageViewOwl"
-            android:layout_width="91dp"
-            android:layout_height="56dp"
-            app:srcCompat="@drawable/timer"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="104dp"
-    />
+        android:id="@+id/imageViewOwl"
+        android:layout_width="91dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/timer" />
+
     <ImageView
             android:id="@+id/imageViewMouse"
             android:layout_width="94dp"
@@ -26,24 +26,37 @@
             android:layout_marginStart="104dp"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOwl"
             android:layout_marginTop="4dp"/>
+
+    <ImageView
+        android:id="@+id/imageViewSnake"
+        android:layout_width="94dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewOwl"
+        app:srcCompat="@drawable/snake" />
+
     <com.khudyakovvladimir.vhowl.game.OwlReady
-            android:id="@+id/owlReady"
-            android:layout_width="171dp"
-            android:layout_height="160dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
-            app:layout_constraintTop_toBottomOf="@+id/textViewCount"
-            android:layout_marginTop="24dp"/>
+        android:id="@+id/owlReady"
+        android:layout_width="171dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCount" />
+
     <com.khudyakovvladimir.vhowl.game.OwlSleep
-            android:id="@+id/owlSleep"
-            android:layout_width="166dp"
-            android:layout_height="169dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.477"
-            app:layout_constraintTop_toBottomOf="@+id/owlReady"
-    />
+        android:id="@+id/owlSleep"
+        android:layout_width="166dp"
+        android:layout_height="169dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/owlReady" />
+
     <TextView
             android:id="@+id/textViewTime"
             android:text="12:00"
@@ -58,29 +71,45 @@
             android:layout_marginTop="36dp"
             app:layout_constraintStart_toEndOf="@+id/imageViewOwl"
             app:layout_constraintHorizontal_bias="1.0"/>
+
     <TextView
-            android:id="@+id/textViewCount"
-            android:text="12"
-            android:layout_width="101dp"
-            android:layout_height="41dp"
-            android:fontFamily="@font/segoesc"
-            android:textSize="18sp"
-            android:gravity="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageViewMouse"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/textViewTime"
-            android:layout_marginTop="12dp"/>
+        android:id="@+id/textViewCount"
+        android:layout_width="101dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/segoesc"
+        android:gravity="center"
+        android:text="12"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintStart_toEndOf="@+id/imageViewMouse"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
+
+    <TextView
+        android:id="@+id/textViewCountSnake"
+        android:layout_width="101dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="68dp"
+        android:fontFamily="@font/segoesc"
+        android:gravity="center"
+        android:text="12"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.178"
+        app:layout_constraintStart_toEndOf="@+id/imageViewMouse"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />
+
     <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/cloud"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/owlSleep"
-            android:layout_marginTop="52dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.095"/>
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/owlSleep"
+        app:layout_constraintVertical_bias="0.337"
+        app:srcCompat="@drawable/cloud" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
